src/objects/Pharmacy_Records__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pharmacy Records</relationshipLabel>
        <relationshipName>Pharmacy_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Action_By__c</fullName>
        <label>Action By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinic__c</fullName>
        <label>Clinic</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dosage__c</fullName>
        <label>Dosage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Action__c</fullName>
        <label>Last Action</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <label>Member ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pharmacist__c</fullName>
        <label>Pharmacist</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescribed_By__c</fullName>
        <label>Prescribed By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refills_By__c</fullName>
        <label>Refills By</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks_from_Pharmacy__c</fullName>
        <label>Remarks from Pharmacy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Pharmacy Records</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Clinic__c</columns>
        <columns>Description__c</columns>
        <columns>Dosage__c</columns>
        <columns>Pharmacist__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pharmacy Records Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharmacy Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>